# tea-metrics

./: .gitignore  README.md  pyproject.toml
docs/: CFG-PARAMS-doc.md
internal/config/WEGC/: ERA5_AT_Tx25.yaml  ERA5_NO_Txp99.yaml  ERA5_SEA_Tx99_wegnet.yaml  SPCS_SEA_Tx99_wegnet.yaml  TEA_noAGR-AUT_ERA5.yaml
plots/: compare_GRvsAGR.py  plot_TEA.py  plot_TEA_AF.py
plots/overview-plots/: plot_TEX-map-EUR.py  plot_main-parameter.py  plot_threshold-grid.py
plots/paper-figs/: plot_EDF2.py  plot_fig7a_EDF6.py
src/teametrics/: TEA.py  TEA_AGR.py  __init__.py  calc_TEA.py
src/teametrics/common/: TEA_logger.py  config.py  general_functions.py  var_attrs.py
src/teametrics/config/: TEA_CFG_template.yaml
src/teametrics/utils/: calc_decadal_indicators.py
src/teametrics/utils/ERA5/: download_ERA5-Land.py  prep_ERA5-hourly.py  prep_ERA5Heat.py
