[project]
name = "teametrics"
license = "GPL-3.0-or-later"
description = "Code to calculate Threshold Exceedance Amount (TEA) indicators as defined in https://doi.org/10.48550/arXiv.2504.18964"
authors = [
    {name = "Jürgen Fuchsberger",email = "juergen.fuchsberger@uni-graz.at"},
    {name = "Stephanie Haas",email = "stephanie.haas@uni-graz.at"},
    {name = "Gottfried Kirchengast",email = "gottfried.kirchengast@uni-graz.at"},
]
readme = "README.md"

requires-python = ">=3.11, <4.0"

dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "xarray (>=2025.7.1,<2026.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "cfunits (>=3.3.7,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "h5netcdf (>=1.6.3,<2.0.0)",
    "dask (>=2025.5.1,<2026.0.0)",
    "metpy (>=1.7.0,<2.0.0)",
    "cartopy (>=0.25.0,<0.26.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

dynamic = ["version", "classifiers"]

[project.optional-dependencies]

[project.scripts]
calc_tea = "teametrics.calc_TEA:run"
create_region_masks = "teametrics.utils.create_region_masks:run"
tea_example = "teametrics.TEA_example:run"
prep_ERA5 = "teametrics.utils.ERA5.prep_ERA5:run"
prep_ERA5Land = "teametrics.utils.ERA5.prep_ERA5Land:run"
regrid_SPARTACUS_to_WEGNext = "teametrics.utils.SPARTACUS.regrid_SPARTACUS_to_WEGNext:run"

[project.gui-scripts]
# TODO
# gui_calc_tea = "teametrics.gui.calcTEA:run"

[project.urls]
repository = "https://github.com/wegc-juf/tea-indicators/"

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


[tool]
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
bump = true

[tool.poetry-dynamic-versioning.substitution]
folders = [
    {path = "src", files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py"], patterns = [
        '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''',
        { value = '''(^__version_tuple__\s*(?::.*?)?=\s*\()[^)]*(\))''', mode = "tuple" },
    ]  },
    {path = ".", files = ["README.md"], patterns = ['''(teametrics-)[^ ]+(-py3)''', '''(Version\s+)[^ ]+(..Zenodo)''']},
]

[tool.poetry-dynamic-versioning.files."README.md"]
persistent-substitution = true

[tool.poetry-dynamic-versioning.files."src/teametrics/__init__.py"]
persistent-substitution = true

[tool.poetry]
include = ["src/teametrics/config/*.yaml", "src/teametrics/data/examples/ERA5_Tx_1956-2024_CH.nc", "README.md",
    "LICENSE"]
version = "0.7.1"
